[package]
name = "pi_scene_shell"
version = "0.0.4"
authors = ["baip0002 <2494156981@qq.com>"]
edition = "2021"
description = "Framework."
repository = "https://github.com/GaiaWorld/pi_3d"
license = "MIT OR Apache-2.0"
keywords = ["pi engine"]

[dependencies]
log                 = "0.4"
env_logger          = "0.9"
wgpu                = { version = "0.1", registry = "yn", package = "pi_wgpu" }
naga                = { version = "0.19", features = [ "glsl-in", ] }
bevy_ecs            = "0.11"
bevy_app            = { version = "0.11", default_features = false }
bevy_a11y           = "0.11"
bevy_hierarchy      = "0.11"
bevy_input          = "0.11"
bevy_log            = "0.11"
bevy_math           = "0.11"
bevy_reflect        = "0.11"
bevy_time           = "0.11"
bevy_window         = "0.11"

smallvec            = "1.9"
crossbeam           = "0.8"
futures             = "0.3"
# image               = "0.24"

parry3d             = "0.13"
lazy_static         = "1.4"
pi_spatial          = "0.5"


approx              = "0.5"
bytemuck            = { version = "1.4", features = ["derive"] }

winit               = { version = "0.27", registry = "yn" }
pollster            = "0.2"
spin_sleep          = "1.1"
derive_deref        = "1.1"
serde_json          = { features = ["raw_value"], version = "1.0" }
serde               = { features = ["derive"], version = "1.0" }

pi_slotmap = "0.1"
pi_hash             = "0.1"
pi_share            = "0.4"

pi_time             = "0.3"


pi_atom             = { version="0.5", features = ["serde"] }

pi_assets           = "0.13"
pi_futures          = "0.1"

pi-async-rt         = "0.1"
pi_slotmap_tree     = "0.3"
pi_hal              = { version = "0.1", registry = "yn" }

pi_bevy_ecs_extend      = { version = "0.1", registry = "yn" }
pi_bevy_winit_window    = { version = "0.1", registry = "yn" }
pi_bevy_render_plugin   = { version = "0.1", registry = "yn" }
pi_bevy_asset           = { version = "0.1", registry = "yn" }

pi_render               = { version = "0.1", registry = "yn" }
render_utils            = { version = "0.1", registry = "yn" }
render_derive           = { version = "0.1", registry = "yn" }

pi_scene_math           = { version = "0.0.*", registry = "yn" }
pi_animation            = { version = "0.1", registry = "yn" }
pi_curves               = { version = "0.1", registry = "yn" }



