[package]
name = "procedural_texture"
version = "0.0.1"
authors = ["baip0002 <2494156981@qq.com>"]
edition = "2021"
description = "3D Framework for Scene."
repository = "https://github.com/GaiaWorld/pi_3d"
license = "MIT OR Apache-2.0"
keywords = ["skybox"]

[dependencies]
pi_scene_context = { path = "../pi_scene_context" }
pi_engine_shell = { path = "../pi_engine_shell" }
material_textures = { path = "../material_textures" }

pi_render = { git = "https://github.com/GaiaWorld/pi_render" }
render_utils = { git = "https://github.com/GaiaWorld/pi_render" }
render_pipeline_key = { git = "https://github.com/GaiaWorld/pi_render" }
render_data_container = { git = "https://github.com/GaiaWorld/pi_render" }
render_geometry = { git = "https://github.com/GaiaWorld/pi_render" }
render_resource = { git = "https://github.com/GaiaWorld/pi_render" }
render_derive = { git = "https://github.com/GaiaWorld/pi_render" }
render_shader = { git = "https://github.com/GaiaWorld/pi_render" }

pi_scene_math = { git = "https://github.com/GaiaWorld/pi_scene" }


pi_slotmap = "0.1"
pi_hash = "0.1"
pi_atom = { version="0.2", features = ["serde"] }

pi_ecs_macros = { git = "https://github.com/GaiaWorld/pi_ecs.git" }
pi_ecs_utils = { git = "https://github.com/GaiaWorld/pi_ecs_utils.git" }
pi_ecs = { git = "https://github.com/GaiaWorld/pi_ecs.git" }
pi_hal = { git = "https://github.com/GaiaWorld/pi_hal.git" }

naga = { version = "0.9", features = [
    "glsl-in",
    "spv-in",
    "spv-out",
    "wgsl-in",
    "wgsl-out",
] }
wgpu = "0.13"
env_logger = "0.9"
log = "0.4"
smallvec = "1.9"
crossbeam="0.8"
futures = "0.3"


[patch."https://github.com/GaiaWorld/pi_render"]
pi_render = { path = "../../../pi_render" }
render_utils = { path = "../../../pi_render/crates/render_utils" }
render_pipeline_key = { path = "../../../pi_render/crates/render_pipeline_key" }
render_data_container = { path = "../../../pi_render/crates/render_data_container" }
render_geometry = { path = "../../../pi_render/crates/render_geometry" }
render_resource = { path = "../../../pi_render/crates/render_resource" }
render_derive = { path = "../../../pi_render/crates/render_derive" }
render_shader = { path = "../../../pi_render/crates/render_shader" }

[patch."https://github.com/GaiaWorld/pi_scene"]
pi_scene = { path = "../../../pi_scene" }
pi_scene_math = { path = "../../../pi_scene/crates/pi_scene_math" }

[patch."https://github.com/GaiaWorld/pi_hal"]
pi_hal = { path = "../../../pi_hal" }
