[package]
name = "pi_standard_material"
version = "0.0.8"
authors = ["baip0002 <2494156981@qq.com>"]
edition = "2021"
description = "3D Framework for Scene."
repository = "https://github.com/GaiaWorld/pi_3d"
license = "MIT OR Apache-2.0"
keywords = ["3d scene"]

[dependencies]
pi_share        = "0.4"
pi_slotmap = "0.1"
pi_hash         = "0.1"
pi_assets       = "0.13"
pi_atom         = { version="0.5", features = ["serde"] }

wgpu            = { version = "0.1", registry = "yn", package = "pi_wgpu" }
naga            = { version = "0.19", features = [ "glsl-in", ] }


log             = "0.4"

smallvec        = "1.9"
crossbeam       = "0.8"
futures         = "0.3"
derive_deref    = "1.1"

pi_scene_context    = { version = "0.0.*", registry = "yn", path = "../pi_scene_context" }
pi_scene_shell      = { version = "0.0.*", registry = "yn", path = "../pi_scene_shell" }
pi_node_materials   = { version = "0.0.*", registry = "yn", path = "../node_materials" }

pi_render           = { version = "0.1", registry = "yn" }
render_utils        = { version = "0.1", registry = "yn" }
render_derive       = { version = "0.1", registry = "yn" }
pi_scene_math       = { version = "0.0.*", registry = "yn" }
